src/test/ui/issues/issue-10291.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/issue-10291.rs:3:9
   |
LL |         x
   |         ^
   |
note: ...the reference is valid for the anonymous lifetime #2 defined on the body at 2:65...
  --> $DIR/issue-10291.rs:2:65
   |
LL |       drop::<Box<for<'z> FnMut(&'z isize) -> &'z isize>>(Box::new(|z| {
   |  _________________________________________________________________^
LL | |         x
LL | |     }));
   | |_____^
note: ...but the borrowed content is only valid for the lifetime 'x as defined on the function body at 1:9
  --> $DIR/issue-10291.rs:1:9
   |
LL | fn test<'x>(x: &'x isize) {
   |         ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0312`.
